--- a/requirements.txt
+++ b/requirements.txt
@@ -1,40 +1,36 @@
-
-setuptools>=42
-wheel
 # Core FastAPI and async support
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-pydantic==2.5.0
-python-multipart==0.0.6
-
+fastapi
+uvicorn[standard]
+pydantic
+python-multipart
 # Document Processing
-python-docx==1.1.0
-PyPDF2==3.0.1
-filetype==1.2.0
+python-docx
+PyPDF2
+filetype
 
 # Embeddings and Vector Search
-sentence-transformers==2.2.2
-faiss-cpu==1.7.4
-numpy==1.24.3
+sentence-transformers
+faiss-cpu
+numpy
 
 # LLM and NLP
-transformers==4.36.0
-torch==2.1.0
+transformers
+torch
 
-optimum==1.15.0
-tokenizers==0.15.0
+optimum
+tokenizers
 
-langchain==0.0.350
-langchain-community==0.0.1
-tiktoken==0.5.2
-nltk==3.8.1
+langchain
+langchain-community
+tiktoken
+nltk
 
 # HTTP Client and Async
-httpx==0.25.2
-aiofiles==23.2.1
-asyncio==3.4.3
+httpx
+aiofiles
+asyncio
 
 groq
-
-loguru==0.7.2
-python-dotenv==1.0.0
+# Additional Libraries
+loguru
+python-dotenv
